--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron: "00 20 * * *"
+    - cron: "0 0 20 ? * MON-FRI"
 jobs:
   autosend:
     runs-on: ubuntu-latest
