--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron: "00 20 * * SUN-THU"
+    - cron: "00 20 * * 0-4"
 jobs:
   autosend:
     runs-on: ubuntu-latest
