--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron: "30 23 * * 0-5"
+    - cron: "00 00 * * *"
 jobs:
   autosend:
     runs-on: ubuntu-latest
