--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron: "40 0 * * *"
+    - cron: "59 23 * * *"
 jobs:
   autosend:
     runs-on: ubuntu-latest
@@ -13,12 +13,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: "12.x"
       - name: Install dependencies
-        env:
-          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
         run: npm install
       - name: Cache multi paths
         uses: actions/cache@v2
@@ -29,7 +27,6 @@ jobs:
           key: ${{ secrets.CACHE_NAME }}-${{ github.run_id }}
           restore-keys: ${{ secrets.CACHE_NAME }}-
       - name: Run autosend
-        uses: mujo-code/puppeteer-headful@master
         env:
           TEXTNOW_USERNAME: ${{secrets.TEXTNOW_USERNAME}}
           TEXTNOW_PASSWORD: ${{secrets.TEXTNOW_PASSWORD}}
@@ -37,5 +34,5 @@ jobs:
           TEXTNOW_RECIPIENT: ${{secrets.TEXTNOW_RECIPIENT}}
           TEXTNOW_MESSAGE: ${{secrets.TEXTNOW_MESSAGE}}
           CAPTCHA_TOKEN: ${{secrets.CAPTCHA_TOKEN}}
-        with:
-          args: npm start
+        run: |
+          node index.js
